--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/varroa-count.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/varroa-count.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>varroa-count-web-app</title>
     <link href="/src/style.css" rel="stylesheet">
